add style for block

--- a/frontend-chess/src/components/ChessBoard.css
+++ b/frontend-chess/src/components/ChessBoard.css
@@ -17,6 +17,14 @@
     background-color:rgb(232 235 239);
 }
 
+.w {
+    background-color:rgb(232 235 239);
+}
+
 .black {
+    background-color: rgb(125 135 150);
+}
+
+.b {
     background-color: rgb(125 135 150);
 }
