no selection on the blocks

--- a/frontend-chess/src/components/ChessBoard.css
+++ b/frontend-chess/src/components/ChessBoard.css
@@ -11,6 +11,12 @@
     background-color: white;
     width: 85px;
     height: 85px;
+    pointer-events: none;
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
 }
 
 .white {
@@ -28,3 +34,4 @@
 .b {
     background-color: rgb(125 135 150);
 }
+
