--- a/frontend-chess/src/components/ChessBoard.css
+++ b/frontend-chess/src/components/ChessBoard.css
@@ -4,7 +4,7 @@
     background-color: rgb(0 74 158);
     padding: 5px;
     width: 680px;
-    height: 680px
+    height: 680px;
 }
 
 .board-block {
@@ -35,3 +35,12 @@
     background-color: rgb(125 135 150);
 }
 
+.selectDisable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    user-drag: none;
+}
